tests/examples/snapshots/fail/sorts/uncalled.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/uncalled.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: r is a function/definition that takes arguments, but no arguments were passed
  ┌─ tests/examples/fail/sorts/uncalled.fly:7:1
  │
7 │ assert forall x:s. r = x
  │ ^^^^^^^^^^^^^^^^^^^^^^^^


